fix php download

--- a/index.html
+++ b/index.html
@@ -713,40 +713,40 @@
 
 
 
-		function mailsended() {
-
-
-
-			setTimeout(function () {
-				location.href = "#terminvereinbarung";
-
-				var msended = document.getElementById('mailbox_sended');
-				var mcont = document.getElementById('mailboxcontent');
-				var mrow = document.getElementById('mailbox_bottomrow');
-
-				mcont.style.display = "none";
-
-				mcont.style.display = "none";
-				mrow.style.display = "none";
-
-				msended.style.display = "flex";
-
-
-
-			}, 10);
-
-			setTimeout(function () {
-
-				window.location.href = "index.html";
-
-			}, 2000);
-
-
-
-
-
-
-		}
+		// function mailsended() {
+// 
+// 
+// 
+			// setTimeout(function () {
+				// location.href = "#terminvereinbarung";
+// 
+				// var msended = document.getElementById('mailbox_sended');
+				// var mcont = document.getElementById('mailboxcontent');
+				// var mrow = document.getElementById('mailbox_bottomrow');
+// 
+				// mcont.style.display = "none";
+// 
+				// mcont.style.display = "none";
+				// mrow.style.display = "none";
+// 
+				// msended.style.display = "flex";
+// 
+// 
+// 
+			// }, 10);
+// 
+			// setTimeout(function () {
+// 
+				// window.location.href = "index.html";
+// 
+			// }, 2000);
+// 
+// 
+// 
+// 
+// 
+// 
+		// }
 
 	</script>
 
