--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<link href="src/style.css" rel="stylesheet" type="text/css" media="screen">
 	<!-- favicon -->
 	<link rel="icon" type="image/ico" href="src/favicon.ico">
-
 </head>
 
 <body onLoad="" id="bbody">
@@ -93,230 +92,195 @@
 		</div>
 	</div>
 	<div class="menuoverlay" id="menuoverlay" onClick="javascript:bmenu();"></div>
-	<!-- headarea ----------------------------------------------------- -->
-	<div class="header_white" id="home"></div>
-	<div class="headbackground"></div>
-	<div class="headbackground_curve"></div>
-	<div class="headarea">
-		<div class="content1260header">
-			<div class="social_media_area">
-				<div class="sm_sidebox">
-					<!-- sm icon -->
-					<div class="socialmedia cursored" onClick="window.open('https://www.facebook.com')">
-						<svg id="facebook" enable-background="new 0 0 24 24" height="512" viewBox="0 0 24 24"
-							width="512" xmlns="http://www.w3.org/2000/svg">
-							<path
-								d="m15.997 3.985h2.191v-3.816c-.378-.052-1.678-.169-3.192-.169-3.159 0-5.323 1.987-5.323 5.639v3.361h-3.486v4.266h3.486v10.734h4.274v-10.733h3.345l.531-4.266h-3.877v-2.939c.001-1.233.333-2.077 2.051-2.077z" />
-						</svg>
-					</div>
-					<!-- sm icon -->
-					<div class="socialmedia cursored" onClick="window.open('https://www.pinterest.de')">
-						<svg id="pinterest" enable-background="new 0 0 24 24" height="512" viewBox="0 0 24 24"
-							width="512" xmlns="http://www.w3.org/2000/svg">
-							<path
-								d="m12.326 0c-6.579.001-10.076 4.216-10.076 8.812 0 2.131 1.191 4.79 3.098 5.633.544.245.472-.054.94-1.844.037-.149.018-.278-.102-.417-2.726-3.153-.532-9.635 5.751-9.635 9.093 0 7.394 12.582 1.582 12.582-1.498 0-2.614-1.176-2.261-2.631.428-1.733 1.266-3.596 1.266-4.845 0-3.148-4.69-2.681-4.69 1.49 0 1.289.456 2.159.456 2.159s-1.509 6.096-1.789 7.235c-.474 1.928.064 5.049.111 5.318.029.148.195.195.288.073.149-.195 1.973-2.797 2.484-4.678.186-.685.949-3.465.949-3.465.503.908 1.953 1.668 3.498 1.668 4.596 0 7.918-4.04 7.918-9.053-.016-4.806-4.129-8.402-9.423-8.402z" />
-						</svg>
-					</div>
-					<!-- sm icon -->
-					<div class="socialmedia cursored" onClick="window.open('https://www.instagram.com')">
-						<!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-						<!DOCTYPE svg
-							PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-						<svg version="1.1" id="instagram" xmlns="http://www.w3.org/2000/svg"
-							xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="169.063px"
-							height="169.063px" viewBox="0 0 169.063 169.063"
-							style="enable-background:new 0 0 169.063 169.063; " xml:space="preserve">
-							<g>
-								<path d="M122.406,0H46.654C20.929,0,0,20.93,0,46.655v75.752c0,25.726,20.929,46.655,46.654,46.655h75.752
+	<header>
+		<div class="header_white" id="home"></div>
+		<div class="headbackground"></div>
+		<div class="headbackground_curve"></div>
+		<div class="headarea">
+			<div class="content1260header">
+				<div class="social_media_area">
+					<div class="sm_sidebox">
+						<!-- sm icon -->
+						<div class="socialmedia cursored" onClick="window.open('https://www.facebook.com')">
+							<svg id="facebook" enable-background="new 0 0 24 24" height="512" viewBox="0 0 24 24"
+								width="512" xmlns="http://www.w3.org/2000/svg">
+								<path
+									d="m15.997 3.985h2.191v-3.816c-.378-.052-1.678-.169-3.192-.169-3.159 0-5.323 1.987-5.323 5.639v3.361h-3.486v4.266h3.486v10.734h4.274v-10.733h3.345l.531-4.266h-3.877v-2.939c.001-1.233.333-2.077 2.051-2.077z" />
+							</svg>
+						</div>
+						<!-- sm icon -->
+						<div class="socialmedia cursored" onClick="window.open('https://www.pinterest.de')">
+							<svg id="pinterest" enable-background="new 0 0 24 24" height="512" viewBox="0 0 24 24"
+								width="512" xmlns="http://www.w3.org/2000/svg">
+								<path
+									d="m12.326 0c-6.579.001-10.076 4.216-10.076 8.812 0 2.131 1.191 4.79 3.098 5.633.544.245.472-.054.94-1.844.037-.149.018-.278-.102-.417-2.726-3.153-.532-9.635 5.751-9.635 9.093 0 7.394 12.582 1.582 12.582-1.498 0-2.614-1.176-2.261-2.631.428-1.733 1.266-3.596 1.266-4.845 0-3.148-4.69-2.681-4.69 1.49 0 1.289.456 2.159.456 2.159s-1.509 6.096-1.789 7.235c-.474 1.928.064 5.049.111 5.318.029.148.195.195.288.073.149-.195 1.973-2.797 2.484-4.678.186-.685.949-3.465.949-3.465.503.908 1.953 1.668 3.498 1.668 4.596 0 7.918-4.04 7.918-9.053-.016-4.806-4.129-8.402-9.423-8.402z" />
+							</svg>
+						</div>
+						<!-- sm icon -->
+						<div class="socialmedia cursored" onClick="window.open('https://www.instagram.com')">
+							<!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+							<!DOCTYPE svg
+								PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+							<svg version="1.1" id="instagram" xmlns="http://www.w3.org/2000/svg"
+								xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="169.063px"
+								height="169.063px" viewBox="0 0 169.063 169.063"
+								style="enable-background:new 0 0 169.063 169.063; " xml:space="preserve">
+								<g>
+									<path d="M122.406,0H46.654C20.929,0,0,20.93,0,46.655v75.752c0,25.726,20.929,46.655,46.654,46.655h75.752
 			c25.727,0,46.656-20.93,46.656-46.655V46.655C169.063,20.93,148.133,0,122.406,0z M154.063,122.407
 			c0,17.455-14.201,31.655-31.656,31.655H46.654C29.2,154.063,15,139.862,15,122.407V46.655C15,29.201,29.2,15,46.654,15h75.752
 			c17.455,0,31.656,14.201,31.656,31.655V122.407z" />
-								<path d="M84.531,40.97c-24.021,0-43.563,19.542-43.563,43.563c0,24.02,19.542,43.561,43.563,43.561s43.563-19.541,43.563-43.561
+									<path d="M84.531,40.97c-24.021,0-43.563,19.542-43.563,43.563c0,24.02,19.542,43.561,43.563,43.561s43.563-19.541,43.563-43.561
 			C128.094,60.512,108.552,40.97,84.531,40.97z M84.531,113.093c-15.749,0-28.563-12.812-28.563-28.561
 			c0-15.75,12.813-28.563,28.563-28.563s28.563,12.813,28.563,28.563C113.094,100.281,100.28,113.093,84.531,113.093z" />
-								<path d="M129.921,28.251c-2.89,0-5.729,1.17-7.77,3.22c-2.051,2.04-3.23,4.88-3.23,7.78c0,2.891,1.18,5.73,3.23,7.78
+									<path d="M129.921,28.251c-2.89,0-5.729,1.17-7.77,3.22c-2.051,2.04-3.23,4.88-3.23,7.78c0,2.891,1.18,5.73,3.23,7.78
 			c2.04,2.04,4.88,3.22,7.77,3.22c2.9,0,5.73-1.18,7.78-3.22c2.05-2.05,3.22-4.89,3.22-7.78c0-2.9-1.17-5.74-3.22-7.78
 			C135.661,29.421,132.821,28.251,129.921,28.251z" />
-							</g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-						</svg>
+								</g>
+								<g></g>
+								<g></g>
+								<g></g>
+								<g></g>
+								<g></g>
+								<g></g>
+								<g></g>
+								<g></g>
+								<g></g>
+								<g></g>
+								<g></g>
+								<g></g>
+								<g></g>
+								<g></g>
+								<g></g>
+							</svg>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="header_mainarea">
-				<div class="contentleft50">
-					<div class="brillen_linie">
-						<svg version="1.1" id="brillenlinie1" xmlns="http://www.w3.org/2000/svg"
-							xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 87.4 66.6"
-							style="enable-background:new 0 0 87.4 66.6;" xml:space="preserve">
-							<g>
-								<path d="M84.9,6.5C79.5,0.8,60.1,0.2,52,0.2c-3.9,0-6.5,0.1-7.8,0.2C42.8,0.5,9.6,2.6,2.2,11.5c-3.6,4.3-1.5,13.4,0,20.1
+				<div class="header_mainarea">
+					<div class="contentleft50">
+						<div class="brillen_linie">
+							<svg version="1.1" id="brillenlinie1" xmlns="http://www.w3.org/2000/svg"
+								xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 87.4 66.6"
+								style="enable-background:new 0 0 87.4 66.6;" xml:space="preserve">
+								<g>
+									<path d="M84.9,6.5C79.5,0.8,60.1,0.2,52,0.2c-3.9,0-6.5,0.1-7.8,0.2C42.8,0.5,9.6,2.6,2.2,11.5c-3.6,4.3-1.5,13.4,0,20.1
 			c0.4,2,4.5,19.6,11.3,26.9c4.8,5.1,14.5,8,26.9,8c2.3,0,4.7-0.1,7.1-0.3c14.8-1.3,28.6-6.2,32.4-9c3.4-2.5,4.6-10.1,5.5-15.7
 			c0.1-0.9,0.3-1.8,0.4-2.5C86.3,35.7,89.4,11.2,84.9,6.5z M84.7,38.9c-0.1,0.7-0.3,1.5-0.4,2.5c-0.9,5.4-2,12.9-5.4,15.3
 			c-3.8,2.8-17.2,7.5-31.7,8.8c-2.3,0.2-4.7,0.3-6.9,0.3c-12,0-21.6-2.9-26.2-7.8c-6.7-7.2-10.6-24.3-11-26.3
 			c-1.5-6.5-3.5-15.5,0-19.7C10.4,3.4,42.8,1.3,44.2,1.2C45.4,1.1,48,1,51.8,1c7.9,0,26.8,0.6,32.1,6.2
 			C88.3,11.8,85.3,35.7,84.7,38.9z" />
-							</g>
-						</svg>
-					</div>
-					<svg height="0" width="0">
-						<defs>
-							<clipPath id="svgp">
-								<path class="maskpath" d="M84.9,6.5C79.5,0.8,60.1,0.2,52,0.2c-3.9,0-6.5,0.1-7.8,0.2C42.8,0.5,9.6,2.6,2.2,11.5
+								</g>
+							</svg>
+						</div>
+						<svg height="0" width="0">
+							<defs>
+								<clipPath id="svgp">
+									<path class="maskpath" d="M84.9,6.5C79.5,0.8,60.1,0.2,52,0.2c-3.9,0-6.5,0.1-7.8,0.2C42.8,0.5,9.6,2.6,2.2,11.5
 									 c-3.6,4.3-1.5,13.4,0,20.1c0.4,2,4.5,19.6,11.3,26.9c4.8,5.1,14.5,8,26.9,8c2.3,0,4.7-0.1,7.1-0.3c14.8-1.3,28.6-6.2,32.4-9
 									 c3.4-2.5,4.6-10.1,5.5-15.7c0.1-0.9,0.3-1.8,0.4-2.5C86.3,35.7,89.4,11.2,84.9,6.5z" />
-							</clipPath>
-						</defs>
-					</svg>
-					<div class="brillenslider" id="brslider">
-						<div class="sliderbox">
-							<div class="sliderimage" id="slider1">
-								<img src="src/images/stage/bild_01.jpg" class="slidimage">
-							</div>
-							<div class="sliderimage" id="slider2">
-								<img src="src/images/stage/bild_02.jpg" class="slidimage">
-							</div>
-							<div class="sliderimage" id="slider3">
-								<img src="src/images/stage/bild_03.jpg" class="slidimage">
-							</div>
-							<div class="sliderimage" id="slider4">
-								<img src="src/images/stage/bild_04.jpg" class="slidimage">
-							</div>
-							<div class="sliderimage" id="slider5">
-								<img src="src/images/stage/bild_05.jpg" class="slidimage">
-							</div>
-							<div class="sliderimage" id="slider6">
-								<img src="src/images/stage/bild_06.jpg" class="slidimage">
+								</clipPath>
+							</defs>
+						</svg>
+						<div class="brillenslider" id="brslider">
+							<div class="sliderbox">
+								<div class="sliderimage" id="slider1">
+									<img src="src/images/stage/bild_01.jpg" class="slidimage">
+								</div>
+								<div class="sliderimage" id="slider2">
+									<img src="src/images/stage/bild_02.jpg" class="slidimage">
+								</div>
+								<div class="sliderimage" id="slider3">
+									<img src="src/images/stage/bild_03.jpg" class="slidimage">
+								</div>
+								<div class="sliderimage" id="slider4">
+									<img src="src/images/stage/bild_04.jpg" class="slidimage">
+								</div>
+								<div class="sliderimage" id="slider5">
+									<img src="src/images/stage/bild_05.jpg" class="slidimage">
+								</div>
+								<div class="sliderimage" id="slider6">
+									<img src="src/images/stage/bild_06.jpg" class="slidimage">
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="contentright50">
-					<div class="brillen_linie2">
-						<svg version="1.1" id="brillenlinie2" xmlns="http://www.w3.org/2000/svg"
-							xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 87.4 66.6"
-							style="enable-background:new 0 0 87.4 66.6;" xml:space="preserve">
-							<g>
-								<path d="M84.9,6.5C79.5,0.8,60.1,0.2,52,0.2c-3.9,0-6.5,0.1-7.8,0.2C42.8,0.5,9.6,2.6,2.2,11.5c-3.6,4.3-1.5,13.4,0,20.1
+					<div class="contentright50">
+						<div class="brillen_linie2">
+							<svg version="1.1" id="brillenlinie2" xmlns="http://www.w3.org/2000/svg"
+								xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 87.4 66.6"
+								style="enable-background:new 0 0 87.4 66.6;" xml:space="preserve">
+								<g>
+									<path d="M84.9,6.5C79.5,0.8,60.1,0.2,52,0.2c-3.9,0-6.5,0.1-7.8,0.2C42.8,0.5,9.6,2.6,2.2,11.5c-3.6,4.3-1.5,13.4,0,20.1
 				c0.4,2,4.5,19.6,11.3,26.9c4.8,5.1,14.5,8,26.9,8c2.3,0,4.7-0.1,7.1-0.3c14.8-1.3,28.6-6.2,32.4-9c3.4-2.5,4.6-10.1,5.5-15.7
 				c0.1-0.9,0.3-1.8,0.4-2.5C86.3,35.7,89.4,11.2,84.9,6.5z M84.7,38.9c-0.1,0.7-0.3,1.5-0.4,2.5c-0.9,5.4-2,12.9-5.4,15.3
 				c-3.8,2.8-17.2,7.5-31.7,8.8c-2.3,0.2-4.7,0.3-6.9,0.3c-12,0-21.6-2.9-26.2-7.8c-6.7-7.2-10.6-24.3-11-26.3
 				c-1.5-6.5-3.5-15.5,0-19.7C10.4,3.4,42.8,1.3,44.2,1.2C45.4,1.1,48,1,51.8,1c7.9,0,26.8,0.6,32.1,6.2
 				C88.3,11.8,85.3,35.7,84.7,38.9z" />
-							</g>
-						</svg>
-					</div>
-					<div class="titletextbox" id="titletextbox">
-						<!-- slider TEXTE --------------- -->
-						<div class="titelbox_render">
-							<div class="titlebig tibi_anim" id="titelbig">
-								Mit
-								<br>
-								Optik Tack
+								</g>
+							</svg>
+						</div>
+						<div class="titletextbox" id="titletextbox">
+							<!-- slider TEXTE --------------- -->
+							<div class="titelbox_render">
+								<div class="titlebig tibi_anim" id="titelbig">
+									Mit
+									<br>
+									Optik Tack
+								</div>
+							</div>
+							<div class="titlesmall">
+								<div class="subtext1 tism_anim" id="subtext1">Modisch</div>
+								<div class="titelbox_render2">
+									<div class="subtext2 tism_anim2" id="subtext2">auf Zack</div>
+								</div>
 							</div>
 						</div>
-						<div class="titlesmall">
-							<div class="subtext1 tism_anim" id="subtext1">Modisch</div>
-							<div class="titelbox_render2">
-								<div class="subtext2 tism_anim2" id="subtext2">auf Zack</div>
-							</div>
-						</div>
-						<!-- ----------------------------- -->
 					</div>
 				</div>
-			</div>
-			<div class="control_dot_area">
-				<div class="sm_sidebox" id="sliderdotsbox">
-					<center id="dotcenter">
-						<a href="#slider1" class="sliderhref cursored dotclicked" onClick="textslider(id); text1()"
-							id="dot1">
-							<div class="sliderdots"></div>
-						</a>
-						<a href="#slider2" class="sliderhref cursored" onClick="textslider(id); text2()" id="dot2">
-							<div class="sliderdots"></div>
-						</a>
-						<a href="#slider3" class="sliderhref cursored" onClick="textslider(id); text3()" id="dot3">
-							<div class="sliderdots"></div>
-						</a>
-						<a href="#slider4" class="sliderhref cursored" onClick="textslider(id); text4()" id="dot4">
-							<div class="sliderdots"></div>
-						</a>
-						<a href="#slider5" class="sliderhref cursored" onClick="textslider(id); text5()" id="dot5">
-							<div class="sliderdots"></div>
-						</a>
-						<a href="#slider6" class="sliderhref cursored" onClick="textslider(id); text6()" id="dot6">
-							<div class="sliderdots"></div>
-						</a>
-					</center>
+				<div class="control_dot_area">
+					<div class="sm_sidebox" id="sliderdotsbox">
+						<center id="dotcenter">
+							<a href="#slider1" class="sliderhref cursored dotclicked" onClick="textslider(id); text1()"
+								id="dot1">
+								<div class="sliderdots"></div>
+							</a>
+							<a href="#slider2" class="sliderhref cursored" onClick="textslider(id); text2()" id="dot2">
+								<div class="sliderdots"></div>
+							</a>
+							<a href="#slider3" class="sliderhref cursored" onClick="textslider(id); text3()" id="dot3">
+								<div class="sliderdots"></div>
+							</a>
+							<a href="#slider4" class="sliderhref cursored" onClick="textslider(id); text4()" id="dot4">
+								<div class="sliderdots"></div>
+							</a>
+							<a href="#slider5" class="sliderhref cursored" onClick="textslider(id); text5()" id="dot5">
+								<div class="sliderdots"></div>
+							</a>
+							<a href="#slider6" class="sliderhref cursored" onClick="textslider(id); text6()" id="dot6">
+								<div class="sliderdots"></div>
+							</a>
+						</center>
+					</div>
 				</div>
-			</div>
-			<div class="scdowntext">
-				<div class="tscroll" id="tscroll">SCROLL</div>
-				<div class="tdown">DOWN</div>
-			</div>
-			<div class="downarrow_area">
-				<!-- OLD...........
-	<a href="#start" class="kreisbutton cursored" id="kreisbutton">
-	<div class="kreis" id="kreis" style="visibility: visible;">
-
-	<div class="dwa_2_box">
-
-
-	<svg version="1.1" id="downarrow_line" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-		 viewBox="0 0 1200 1200" style="enable-background:new 0 0 1200 1200;" xml:space="preserve">
-	<g>
-		<path d="M686,221.5v498.8l-56.2,163.5l-48.3-1.2l-73.3-170v-491c0-38.2,30.9-69.1,69-69H617C655.2,152.5,686,183.4,686,221.5z"/>
-	</g>
-	</svg>
-
-
-	</div>
-
-
-	  <svg version="1.1" id="downarrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	  	 viewBox="0 0 1200 1200" style="enable-background:new 0 0 1200 1200;" xml:space="preserve">
-	  <g>
-	  	<path d="M588.8,939.5L85.5,436.2c-27-27-27-70.7,0-97.6l28.1-28.1c27-27,70.7-27,97.6,0l377.5,377.5c7.1,7.1,18.6,7.1,25.6,0
-	  		l379.5-379.5c27-27,70.7-27,97.6,0l28.1,28.1c27,27,27,70.7,0,97.6L614.4,939.5C607.3,946.6,595.8,946.6,588.8,939.5z"/>
-	  </g>
-	  </svg>
-
-
-
-
-
-
-	</div>
-	</a>
--->
-				<a href="#start" class="downarrowhref cursored scrolled" onclick="stopanim();">
-					<div class="dwarrow_box">
-						<div class="dwa_line">
-							<!-- <div class="dwa_lineright"></div><div class="dwa_lineleft"></div>-->
-						</div>
-						<div class="cubearrowholder">
-							<div class="dwcube_alternatearrow"></div>
-						</div>
-				</a>
+				<div class="scdowntext">
+					<div class="tscroll" id="tscroll">SCROLL</div>
+					<div class="tdown">DOWN</div>
+				</div>
+				<div class="downarrow_area">
+					<a href="#start" class="downarrowhref cursored scrolled" onclick="stopanim();">
+						<div class="dwarrow_box">
+							<div class="dwa_line">
+								<!-- <div class="dwa_lineright"></div><div class="dwa_lineleft"></div>-->
+							</div>
+							<div class="cubearrowholder">
+								<div class="dwcube_alternatearrow"></div>
+							</div>
+					</a>
+				</div>
 			</div>
 		</div>
-	</div>
-	</div>
-	<!-- header end----------------------------------------- -->
+		</div>
+	</header>
 	<main>
 		<center>
 			<div class="mainbody">
@@ -521,11 +485,11 @@
 			</div>
 		</center>
 	</main>
-	<div class="cursor" id="cursor">
-		<div class="cursor2" id="cursor2"></div>
+	<div class="cursorcontainer" id="cursorcontainer">
+		<div class="cursor" id="cursor"></div>
 	</div>
-
-	<!-- <script src="src/main.js"></script> -->
+	<script src="src/jquery-3.7.1.min.js"></script>
+	<script src="src/main.js"></script>
 </body>
 
 </html>
