little clean up from css, fix header curve and js animations (keep all original as far as possible)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- beschreibung der webseite für google -->
 	<meta name="description" content="Optik Tack - ein Tick mehr Durchblick als anderswo">
-	<link href="src/style-old.css" rel="stylesheet" type="text/css" media="screen">
 	<link href="src/style.css" rel="stylesheet" type="text/css" media="screen">
 	<!-- favicon -->
 	<link rel="icon" type="image/ico" href="src/favicon.ico">
@@ -95,7 +94,9 @@
 	<header>
 		<div class="header_white" id="home"></div>
 		<div class="headbackground"></div>
-		<div class="headbackground_curve"></div>
+		<div class="headbackground_curvecontainer">
+			<div class="headbackground_curve"></div>
+		</div>
 		<div class="headarea">
 			<div class="content1260header">
 				<div class="social_media_area">
