fix sliding,submit url, readme

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 								</div>
 						</div>
 						<div class="mailbox_bottomrow" id="mailbox_bottomrow">
-							<input type="submit" class="basic_button cursored" value="senden">
+							<input type="submit" class="basic_button cursored" value="senden" id="submitMail">
 						</div>
 					</div>
 					</form>
